Add cmake support for local googletest installation - Resolve #8

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,10 @@
 *.dwo
 
 # External dependencies
-/dependencies
-/build
-/logs
 /_archive
-/docs
 /.vscode
+/build
+/dependencies
+/logs
+/docs
+/scripts
