--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ if(BUILD_MODE STREQUAL "RELEASE")
 elseif(BUILD_MODE STREQUAL "DEBUG")
     include(cm-debug.cmake)
 elseif(BUILD_MODE STREQUAL "TEST")
+    set(GTEST_BUILD "LOCAL" CACHE STRING "GoogleTest build method: FETCH, LOCAL, or DEPS")
     include(cm-tests.cmake)
 else()
     message(FATAL_ERROR "Invalid BUILD_MODE: ${BUILD_MODE}. Must be RELEASE, DEBUG, or TEST")
