Successful File Manager Tests

--- a/tests/file_manager_tests/CMakeLists.txt
+++ b/tests/file_manager_tests/CMakeLists.txt
@@ -13,7 +13,7 @@ set(MODULE_UNDER_TEST
 add_executable(${TARGET_NAME} ${TEST_SOURCES})
 
 # Link with our common test interface
-target_link_libraries(${TARGET_NAME} PRIVATE ${MODULE_UNDER_TEST} test_common)
+target_link_libraries(${TARGET_NAME} PRIVATE ${MODULE_UNDER_TEST} test_common LBM::Tests::TestUtils)
 target_compile_definitions(${TARGET_NAME} PRIVATE PROJECT_ROOT="${PROJECT_ROOT}")
 
 # Set properties
